--- a/ETL DaDo Bier/Properties/Connections.settings
+++ b/ETL DaDo Bier/Properties/Connections.settings
@@ -5,5 +5,8 @@
     <Setting Name="QueopsCubo" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Data Source=192.168.0.248;Initial Catalog=DadoBier_Cubo;Persist Security Info=True;User ID=dado;Password=Dad01995</Value>
     </Setting>
+    <Setting Name="QueopsUmuarama" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=192.168.2.248;Initial Catalog=DadoBier_Umu;Persist Security Info=True;User ID=dado;Password=Dad01995</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
